// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the children after the tabs 1`] = `
Array [
  <div
    class="tabsContainer"
  >
    <ul
      class="tabs"
    >
      <li
        class="tab"
      >
        <button
          title="tabTitle1"
        >
          tabTitle1
        </button>
      </li>
      <li
        class="tab"
      >
        <button
          title="tabTitle2"
        >
          tabTitle2
        </button>
      </li>
    </ul>
  </div>,
  <h1>
    Child
  </h1>,
]
`;

exports[`Should render the children with the passed props 1`] = `
Array [
  <div
    class="tabsContainer"
  >
    <ul
      class="tabs"
    >
      <li
        class="tab"
      >
        <button
          title="tabTitle1"
        >
          tabTitle1
        </button>
      </li>
    </ul>
  </div>,
  <h2>
    Value
  </h2>,
]
`;

exports[`Should render the header between children and tabs 1`] = `
Array [
  <div
    class="tabsContainer"
  >
    <ul
      class="tabs"
    >
      <li
        class="tab"
      >
        <button
          title="tabTitle1"
        >
          tabTitle1
        </button>
      </li>
    </ul>
  </div>,
  <h1>
    Header
  </h1>,
  <h2>
    Child
  </h2>,
]
`;
